--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "url": "git+https://github.com/azcorp-cloud/pbRpc-client.git"
   },
   "main": "dist/index.js",
-  "typings" : "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "version": "0.2.0",
   "license": "MIT",
   "dependencies": {
+    "google-protobuf": "^3.4.0",
     "npm": "^5.7.1",
     "rxjs": "^5.5.6",
-    "ts-protoc-gen": "^0.4.0",
-    "google-protobuf": "^3.4.0"
+    "ts-protoc-gen": "^0.4.0"
   },
   "devDependencies": {
     "ts-node": "~4.1.0",
