--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pbrpc",
-  "description": "Websocket protobuf client",
+  "description": "Websocket protobuf client work with(https://github.com/azcorp-cloud/pbrpc.git)",
   "scripts": {
     "build": "tsc"
   },
@@ -10,8 +10,8 @@
   },
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "version": "0.2.0",
-  "license": "MIT",
+  "version": "0.2.1",
+  "license": "Apache License 2.0",
   "dependencies": {
     "google-protobuf": "^3.4.0",
     "npm": "^5.7.1",
